remove legacy demo and support
